# robot_lab_demo

./: .gitignore  README.md  fix_ros_jazzy_abi_packages.sh
docs/: github-collaboration-plan.md
results/: obstacle_latency.csv  perception_eval.csv  pick_place_eval.csv  pick_place_eval_clean.csv
src/robot_lab_bringup/: CMakeLists.txt  package.xml
src/robot_lab_bringup/config/: lab_ur_controllers.yaml  robot_lab_moveit.rviz  robot_lab_stable.rviz
src/robot_lab_bringup/launch/: lab_ur_mecanum_gz.launch.py  lab_ur_moveit_gz.launch.py
src/robot_lab_bringup/scripts/: recenter_rviz_window.py  static_lab_scene_markers.py
src/robot_lab_description/: CMakeLists.txt  package.xml
src/robot_lab_description/srdf/: lab_ur_gripper.srdf.xacro
src/robot_lab_description/urdf/: lab_ur_gripper.urdf.xacro  lab_ur_mecanum.urdf.xacro
src/robot_lab_description/urdf/inc/: mecanum_base_macro.xacro  parallel_gripper_macro.xacro
src/robot_lab_description/worlds/: lab_minimal.sdf
src/robot_lab_perception/: package.xml  setup.cfg  setup.py
src/robot_lab_perception/robot_lab_perception/: __init__.py  detector_backends.py  evaluate_perception.py  object_pose_estimator.py
src/robot_lab_sim_tools/: package.xml  setup.cfg  setup.py
src/robot_lab_sim_tools/robot_lab_sim_tools/: gazebo_state.py  soft_gripper_attach.py
src/robot_lab_tasks/: CMakeLists.txt  package.xml
src/robot_lab_tasks/scripts/: evaluate_pick_place.py  obstacle_monitor.py  planning_scene_object_publisher.py  task_orchestrator.py
src/robot_lab_tasks/src/: pick_place_node.cpp  preset_joint_demo.cpp  scripted_pick_demo.cpp
tests/: test_gazebo_classic_contracts.py  test_preset_joint_demo_preflight.py  test_project_structure.py
