<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_lab_tasks</name>
  <version>0.1.0</version>
  <description>Task-level planning nodes for the robot lab competition demo.</description>
  <maintainer email="thw2188@example.com">thw2188</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
